--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,24 @@
+/*@import url(https://fonts.googleapis.com/css?family=Quicksand);*/
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 30px 20px;
+    font: 20px "Lucida Grande", Helvetica, Quicksand, sans-serif;
+    letter-spacing: 2px;
 }
 
-a {
-  color: #00B7FF;
+#table {
+    width: 1600px;
+    margin-top: 15px;
+}
+
+.center {
+    text-align: center;
+}
+
+button {
+    padding: 5px 20px;
+    border: solid #000 1px;
+    border-radius: 4px;
+    font-size: 16px;
+    letter-spacing: 4px;
 }
