pop modal modification and test completed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,43 +1,40 @@
 /*@import url(https://fonts.googleapis.com/css?family=Quicksand);*/
 
 body {
-    padding: 30px 20px;
-    font: 20px "Lucida Grande", Helvetica, Quicksand, sans-serif;
-    letter-spacing: 2px;
-}
-
-#table {
-  width: auto;
-  margin-top: 15px;
+  padding: 30px 20px;
+  font: 20px "Lucida Grande", Helvetica, Quicksand, sans-serif;
+  letter-spacing: 2px;
 }
 
 .table-bordered {
+  width: auto;
+  margin-top: 15px;
   border: solid #fff 0px;
 }
 
-.table td {
+.table tr td {
   vertical-align: middle;
 }
 
-.Seq, .Priority {
+.table tr .center {
+  text-align: center;
+}
+
+.table tr .Seq, .table tr .Priority {
   width: 150px;
 }
 
-.Status, .Category, .Title, .Owner {
+.table tr .Status, .table tr .Category, .table tr .Title, .table tr .Owner {
   width: 250px;
 }
 
-.table .editBtn, .table .deleteBtn {
+.table tr .editBtn, .table tr .deleteBtn {
   width: 80px;
   background: #fff;
   border: solid #fff 0px;
 }
 
-.center {
-    text-align: center;
-}
-
-button, form #submitBtn {
+button, .modalBox form .submitBtn {
   padding: 5px 20px;
   border: solid #000 1px;
   border-radius: 4px;
@@ -45,40 +42,51 @@ button, form #submitBtn {
   letter-spacing: 4px;
 }
 
-#closeBtn {
-  width: 22px;
+.modalBackground {
   position: absolute;
-  top: 0px;
-  right: 0px;
-  padding: 0px;
-  border-color: rgba(255, 255, 255, 0);
-  background-color: rgba(255, 255, 255, 0);
-
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.4);
+  width: 100vw;
+  height: 100vh;
 }
 
-form #submitBtn {
+.modalBox {
+  position: absolute;
+  left: calc(50% - 350px);
+  top: 100px;
+  background-color: #fff;
+  width: 700px;
+  height: 350px;
+  padding: 10px 20px;
+  border: 1px solid #444444;
+  border-radius: 3px;
+}
+
+.modalBox form .submitBtn {
   width: 80px;
   position: absolute;
   right: calc(50% - 40px);
   bottom: 25px;
 }
 
-form div {
+.modalBox .closeBtn {
+  width: 22px;
+  position: absolute;
+  top: 1px;
+  right: -4px;
+  padding: 0px;
+  border-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.modalBox form div {
   margin: 15px 5px;
 }
 
-form div input {
+.modalBox form div input {
   width: 250px;
   border-radius: 2px;
   letter-spacing: 2px;
   text-indent: 8px;
-}
-
-/*-- modify react-modal css --*/
-.ReactModal__Content, .ReactModal__Content--after-open {
-  position: absolute;
-  width: 700px;
-  height: 380px;
-  margin-left: calc(50% - 390px);
-  margin-top: 50px;
 }
