complete component modification but test not yet

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -30,10 +30,10 @@ body {
         .center {
           text-align: center;
         }
-        .Seq, .Priority {
+        .seq, .priority {
           width: 150px;
         }
-        .Status, .Category, .Title, .Owner {
+        .status, .category, .title, .owner {
           width: 250px;
         }
         .editBtn, .deleteBtn {
