--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -62,6 +62,12 @@ body {
         border-radius: 3px;
         h1 {
           font-style: italic;
+          span {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: bold;
+            color: red;
+          }
         }
         .closeBtn {
           width: 22px;
@@ -80,6 +86,9 @@ body {
               border-radius: 2px;
               letter-spacing: 2px;
               text-indent: 8px;
+            }
+            span {
+              color: red;
             }
           }
           .submitBtn {
