--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -19,6 +19,10 @@ body {
       font-size: 16px;
       letter-spacing: 4px;
     }
+    h2 {
+      margin-top: 30px;
+      margin-left: 20px;
+    }
     .table-bordered {
       width: auto;
       margin-top: 15px;
